<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <TextView
            android:id="@+id/lista_graos_personalizada_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nome" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lista_graos_personalizada_potencial_extracao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potencialExtracao"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/lista_graos_personalizada_potencial_extracao_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potencialExtracao"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/lista_graos_personalizada_cor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cor"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lista_graos_personalizada_kilos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kilos"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/lista_graos_personalizada_percentagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percentagem"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>