<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_temperatura_minmax_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/temperatura"
                android:textSize="8sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_temperatura_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempMin"
                android:textSize="8sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_temperatura_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempMax"
                android:textSize="8sp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_ph_minmax_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/ph"
                android:textSize="8sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_ph_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phMin"
                android:textSize="8sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_ph_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phMax"
                android:textSize="8sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="12sp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_temperaturaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/temperatura"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatura"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_tempoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAlignment="center"
                android:text="@string/tempo"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/lista_temperaturas_personalizada_tempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tempo"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>