<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNomeLupuloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/editTextNomeLupuloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/textViewAplhaLupuloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/alpha" />

        <EditText
            android:id="@+id/editTextAplhaLupuloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/textViewTipoLululoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/tipo"/>

        <Spinner
            android:id="@+id/spinnerTipoLupuloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dialogEditLupuloButtonSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" Ok"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/dialogEditLupuloButtonApagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remover"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

</LinearLayout>
